css/card.css
/* ... */
button{
    position: absolute;
    font-size: 1.7rem;
    top: 2em;
    right: 1.5em;
    cursor: pointer;
    border: none;
    background: none;
    margin-right: 0.3em;
}
.createcard h4{
    font-size: 4rem;
    margin-bottom: 1em;
    margin-top: 1em;
    line-height: 115%;
    width: 11em;
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}
.moveit{
    display: flex;
    justify-content: center;
    font-size: 2em;
    animation: up-and-down 2s infinite;
}
.made{
    height: 350px;
    width: 300px;
    position: relative;
    top: 0;
    left: 47%;
    display: none;
}
.artist-name-searched{
    position: relative;
    left: 5em;
}
.album-cover{
    width: 2.5em;
    height: 2.5em;
}
.cta{
    position: relative;
    top: -6em;
    margin-left: auto;
    margin-right: auto;
    color: #003824;
}
.header-song{
    display: none;
}
@keyframes up-and-down {
    0% {
      transform: translateY(0);
    }
    50% {
      transform: translateY(-50px);
    }
    100% {
      transform: translateY(0);
    }
}
@media (max-width: 450px) {
    html{
        font-size: 50%;
        overflow-x: hidden;
    }
    body{
        color: #fff;
    }
    .logo{
        width: 25%;
    }
    .hero .mockup{
        position: absolute;
        top: 25em;
        right: -19em;
        z-index: -2;
    }
    .hero .mockup-bg{
        width: 10rem;
        height: 10rem;
        top: 5em;
        right: 4em;
    }
    .hero-content p{
        font-size: 1.6rem;
    }
    .hero-content h4{
        font-size: 4rem;
    }
    .card-list{
    }
    header svg{
        position: absolute;
        top: 6em;
        right: 6em;
        width: 64px;
        height: 64px;

    }
    .card-header h2{
        font-size: 2.4rem;
        background: linear-gradient(180deg, #00c795, #1ED760);
        text-shadow: none;
        -webkit-text-fill-color: transparent;
        -webkit-background-clip: text;
        background-clip: text;
        width: 9em;
        color: #1ED760;
    }
    .card{
        display: flex;
        flex-direction: column;
        gap: 10em;
    }
    .card-header{
        position: relative;
        top: 0;
        left: 7em;
    }
    #artist-follow-0, #artist-follow-1, #artist-follow-2, #artist-follow-3, #artist-follow-4, #artist-follow-5, #artist-follow-6{
        position: relative;
        top: 3em;
        left: 1.3em;
        font-size: 1.5rem;
    }
    .bx-group{
        position: relative;
        top: 6.5rem;
        left: 0em;
        font-size: 2rem;
    }
    .tags{
        position: relative;
        left: 4rem;
        top: 0em;
        max-width: 30em;
    }
    .tags a{
        font-size: 1.3rem;
    }
    .made{
        width: 5rem;
        height: 40rem;
        margin-left: auto;
        margin-right: auto;
        left: 18em;
        display: none;
    }
    .made .follower{
        position: relative;
        top: -3.5em;
        left: -.7em;
    }
    .name{position: absolute;}
    .card-list{
        display: none;
    }
    .tags{
        position: relative;
        top: -5em;
        left: 10em;
    }
    .made .bx-group{
        position: relative;
        top: -.1em;
        left: 2em;
    }
     .album-cover{
        width: 5rem;
        height: 5rem;
    }
    .song-list{
        font-size: 6rem;
        position: relative;
        top:-0em;
    }
    .first-song{
        position: relative;
        font-size: 2rem;
        top: 1.4em;
    }
    
    .made .songs{
        position: relative;
        top: -19em;
        left: 1.5em;
    }
    .made .cta{
        position: relative;
        top: -9em;
        font-size: 1.5rem;
    }
    .made .first-song{
        position: relative;
        font-size: 2rem;
        top: 0.7em;
    }
    .made .second-song{
        position: relative;
        font-size: 2rem;
        top: -.2em;
    }
    .made .last-song{
        position: relative;
        font-size: 2rem;
        top: -1.2em;
    }
    .card .first-song{
        font-size: 1.5rem;
    }
    .card .second-song{
        font-size: 1.5rem;
        position: relative;
        top: .3em;
    }
    .card .last-song{
        font-size: 1.5rem;
    }
     .song-boxi{
        position: relative;
        font-size: 2em;
        top: 1em;
        left: -2em;
        gap: 1.7em;
    }
    .song-duration{
        position: relative;
        font-size: 1.5em;
        gap: 0em;
    }
    
    .made .first-duration{
        position: relative;
        top: .1em;
        left: -2em;
    }
    .made .second-duration{
        position: relative;
        top: -.4em;
        left: -2em;
    }
    
    .made .third-duration{
        position: relative;
        top: -0.8em;
        left: -2em;
    }
    .createcard h4{
        margin-left: auto;
        margin-right: auto;
        font-size: 3.5rem;
        color:#1ED760;
    }
    @keyframes up-and-down {
        0% {
          transform: translateY(0);
        }
        50% {
          transform: translateY(25px);
        }
        100% {
          transform: translateY(0);
        }
    }
    input[type="text"]{
        font-size: 2rem;
    }
    .bxl-deezer{
        font-size: 4rem;
        position: relative;
        top: .8em;
        left: 1.6em;
    }
    .spotylogo{
        display: none;
    }
    .header-song{
        position: absolute;
        top: 16.5em;
        left: -1.2em;
    }
    .header-song h4{
        font-size: 2rem;
    }
}
.ciao{height: 20em;}

